committing my jekyll theme

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ title : Channel Search
         </div>
     </div>
     <ol id="example-list">
-        <li>GP4YOU</li>
+        <li>Change</li>
         <li>vicenews</li>
         <li>TheGuardian</li>
         <li>UChirEOpgFCupRAk5etXqPaA (Bloomberg TicToc)</li>
