committing my jekyll theme

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@ title : Channel Search
         </div>
     </div>
     <ol id="example-list">
-        <li>Change</li>
-        <li>vicenews</li>
-        <li>TheGuardian</li>
-        <li>UChirEOpgFCupRAk5etXqPaA (Bloomberg TicToc)</li>
-        <li>thesamlivecast</li>
+        <li><span style="color: #06cc41">UCL5DoP90k7pkEIJ12lEDFDg</span> (Channel Name: CK360)</li>
+        <li><span style="color: #06cc41">UCPur06mx78RtwgHJzxpu2ew</span> (Channel Name: Wind Walk Travel Videos)</li>
+        <li><span style="color: #06cc41">UCFN_dQuFU6tXwVLXppqOwpA</span> (Channel Name: The NYC Walking Show)</li>
+        <li><span style="color: #06cc41">UC9P2k33fN1nIEn18DEULISg</span> (Channel Name: Virtual Bike Ride Ireland)</li>
+        <li><span style="color: #06cc41">vicenews</span> (Channel Name: Vice News)</li>
     </ol>
 </div>
 <br>
