committing my jekyll theme

--- a/index.1.html
+++ b/index.1.html
@@ -15,8 +15,8 @@ title : Channel Search
             <label class="col-2 col-form-label"><b>Channel(s)</b></label>
             <div class="col-10">
                 <input type="text" class="form-control" id="channels" aria-describedby="help"
-                       placeholder="e.g. UCe_3CoEeinvPMze2u_aENBg or oceanexplorergov"
-                       value="oceanexplorergov"/>
+                       placeholder="e.g. UCe_3CoEeinvPMze2u_aENBg"
+                       value="ck360"/>
                 <small class="form-text text-muted">Full channel_id or shortcut username. Comma-separated
                     lists accepted.</small>
             </div>
